--- a/src/app/crew/crew.component.html
+++ b/src/app/crew/crew.component.html
@@ -1,6 +1,7 @@
 <h3>Crew</h3>
 <ul>
-  <li>Jessica Watkins</li>
+  <!-- <li>Jessica Watkins</li>
   <li>Raja Chari</li>
-  <li>Jasmin Moghbeli</li>
+  <li>Jasmin Moghbeli</li> -->
+  <li *ngFor="let member of crew">{{member.name}}<span *ngIf="member.firstMission">- 1st</span></li>
 </ul>
