--- a/src/app/crew/crew.component.html
+++ b/src/app/crew/crew.component.html
@@ -8,7 +8,8 @@
 <div class="displayBox">
     <h3>Crew <!-- Add a span tag here to display 'Full' when the crew reaches 3. --></h3>
     <ol>
-        <li *ngFor="let astronaut of crew">{{astronaut.name}}</li>
+        <li *ngFor="let astronaut of crew" (mouseover)="selected=astronaut" (mouseout)="selected=false">{{astronaut.name}}</li>
     </ol>
     <!-- Add an img tag here to display astronaut photos. -->
+    <img *ngIf="selected" [src]="selected.photo" />
 </div>
